--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
-DB_USER=postgres
-DB_PASSWORD=Areeb@786
-DB_NAME=bookverse
-DB_HOST=localhost
+DB_USER=bookverse_db_d1js_user
+DB_PASSWORD=CPbGEfQZ0It5QTci8bCniWr0qWCEl5r8
+DB_NAME=bookverse_db_d1js
+DB_HOST=dpg-d5gimg6uk2gs739j76f0-a
 DB_PORT=5432
 
 JWT_SECRET=supersecretkey123
